applications/v5/backend/src/main/java/com/example/weeklyplanning/web/rest/errors/ForbiddenException.java
package com.example.weeklyplanning.web.rest.errors;

public class ForbiddenException extends RuntimeException {

    public ForbiddenException(String message) {
        super(message);
    }
}
